wk_taa_taaqa/src/objects/Professional_Software_Revenue__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Professional_Software_Revenues</relationshipLabel>
        <relationshipName>Professional_Software_Revenues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFDC_ACCTID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC ACCTID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Total_Current_revenue__c</fullName>
        <formula>X2015_Active_Data_Total__c + X2015_Axcess_Document_Total__c + X2015_Axcess_Practice_Total__c + X2015_Axcess_Tax_Total__c + X2015_Axcess_Workstream_Total__c + X2015_Document_OP_Total__c + X2015_Document_Total__c + X2015_ELF_Total__c + X2015_Engagement_Total__c + X2015_Fixed_Assets_Total__c + X2015_Globalfx__c + X2015_KCN_OP_Total__c + X2015_KCN_SaaS_Total__c + X2015_Knowledge_Coach_total__c + X2015_Knowledge_Tools_Total__c + X2015_Org_PF_Total__c + X2015_Outsource_Total__c + X2015_Portal_Total__c + X2015_Practice_Management_Total__c + X2015_Practice_Total__c + X2015_Scan_SaaS_Total__c + X2015_Scan_Total__c + X2015_Tax_Total__c + X2015_Trial_Balance_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Current revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Active_Data_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Active Data Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Active_Data_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Active Data Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Active_Data_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Active Data Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Axcess_Document_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Axcess Document Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Axcess_Document_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Axcess Document Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Axcess_Document_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Axcess Document Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Axcess_Practice_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Axcess Practice Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Axcess_Practice_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Axcess Practice Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Axcess_Practice_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Axcess Practice Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Axcess_Tax_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Axcess Tax Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Axcess_Tax_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Axcess Tax Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Axcess_Tax_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Axcess Tax Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Axcess_Workstream_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Axcess Workstream Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Axcess_Workstream_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Axcess Workstream Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Axcess_Workstream_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Axcess Workstream Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Document_OP_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Document OP Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Document_OP_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Document OP Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Document_OP_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Document OP Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Document_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Document Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Document_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Document Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Document_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Document Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_ELF_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 ELF Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Engagement_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Engagement Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Engagement_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Engagement Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Engagement_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Engagement Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Fixed_Assets_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Fixed Assets Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Fixed_Assets_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Fixed Assets Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Fixed_Assets_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Fixed Assets Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Globalfx_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Globalfx Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_KCN_OP_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 KCN OP Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_KCN_OP_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 KCN OP Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_KCN_OP_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 KCN OP Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_KCN_SaaS_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 KCN SaaS Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_KCN_SaaS_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 KCN SaaS Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_KCN_SaaS_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 KCN SaaS Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Knowledge_Coach_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Knowledge Coach Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Knowledge_Coach_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Knowledge Coach Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Knowledge_Coach_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Knowledge Coach Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Knowledge_Tools_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Knowledge Tools Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Knowledge_Tools_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Knowledge Tools Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Knowledge_Tools_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Knowledge Tools Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Org_PF_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Org/PF Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Outsource_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Outsource Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Portal_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Portal Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Portal_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Portal Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Portal_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Portal Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Practice_Management_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Practice Management Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Practice_Management_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Practice Management Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Practice_Management_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Practice Management Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Practice_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Practice Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Practice_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Practice Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Practice_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Practice Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Scan_SaaS_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Scan SaaS Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Scan_SaaS_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Scan SaaS Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Scan_SaaS_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Scan SaaS Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Scan_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Scan Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Scan_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Scan Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Scan_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Scan Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Tax_Authorizations__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Tax Authorizations</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Tax_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Tax Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Tax_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Tax Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Tax_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Tax Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Trial_Balance_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Trial Balance Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Trial_Balance_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Trial Balance Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Trial_Balance_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2013 Trial Balance Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Active_Data_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Active Data Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Active_Data_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Active Data Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Active_Data_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Active Data Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Document_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Document Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Document_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Document Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Document_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Document Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Practice_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Practice Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Practice_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Practice Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Practice_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Practice Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Tax_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Tax Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Tax_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Tax Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Tax_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Tax Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Workstream_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Workstream Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Workstream_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Workstream Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Axcess_Workstream_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Axcess Workstream Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Document_OP_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Document OP Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Document_OP_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Document OP Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Document_OP_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Document OP Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Document_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Document Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Document_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Document Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Document_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Document Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_ELF_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 ELF Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Engagement_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Engagement Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Engagement_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Engagement Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Engagement_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Engagement Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Fixed_Assets_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Fixed Assets Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Fixed_Assets_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Fixed Assets Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Fixed_Assets_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Fixed Assets Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Globalfx_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Globalfx Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_KCN_OP_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 KCN OP Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_KCN_OP_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 KCN OP Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_KCN_OP_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 KCN OP Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_KCN_SaaS_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 KCN SaaS Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_KCN_SaaS_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 KCN SaaS Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_KCN_SaaS_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 KCN SaaS Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Knowledge_Coach_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Knowledge Coach Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Knowledge_Coach_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Knowledge Coach Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Knowledge_Coach_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Knowledge Coach Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Knowledge_Tools_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Knowledge Tools Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Knowledge_Tools_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Knowledge Tools Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Knowledge_Tools_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Knowledge Tools Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Org_PF_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Org/PF Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Outsource_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Outsource Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Portal_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Portal Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Portal_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Portal Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Portal_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Portal Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Practice_Management_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Practice Management Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Practice_Management_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Practice Management Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Practice_Management_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Practice Management Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Practice_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Practice Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Practice_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Practice Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Practice_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Practice Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Scan_SaaS_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Scan SaaS Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Scan_SaaS_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Scan SaaS Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Scan_SaaS_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Scan SaaS Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Scan_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Scan Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Scan_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Scan Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Scan_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Scan Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Tax_Authorizations__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Tax Authorizations</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Tax_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Tax Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Tax_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Tax Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Tax_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Tax Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Trial_Balance_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Trial Balance Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Trial_Balance_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Trial Balance Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Trial_Balance_Training__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2014 Trial Balance Training</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Active_Data_Software__c</fullName>
        <defaultValue>0</defaultValue>
        <label>2015 Active Data Software</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>